# pyfolds

./: README.md  imgui.ini  main.py  pyproject.toml
shaders/: compute.glsl  frag.glsl  hits.compute.glsl  present_accum.frag.glsl  resolve.compute.glsl  vert.glsl
src/pyfolds/: __main__.py
