[project]
name = "pyfolds"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "imgui>=2.0.0",
    "moderngl>=5.12.0",
    "moderngl-window>=3.1.1",
    "pillow>=12.1.1",
    "pygame>=2.6.1",
    "pyopengl>=3.1.10",
]

[tool.uv]
package = true



[project.scripts]
pyfolds = "pyfolds.__main__:main"
